# fin_fraud_project

./: .gitignore  README.md  debug-attention-risk-v134.md  main.py  pyproject.toml
attention_risk_delivery/: README.md  attention_model.py  common.py  formula_utils.py  markdown_pdf.py  reporting.py  run_attention_batch_reports_numeric_features.py  run_attention_risk_index_only.py
configs/: prediction_default.json  risk_report_attention_default.json  risk_report_default.json  support_files.json
scripts/: package_audit_reports_by_location.py
